quick fix hover state, cropped image

--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -186,6 +186,10 @@
     color: black;
     text-decoration: none;
     padding: 0 10px;
+
+    &:hover {
+        color: $black;
+    }
 }
 
 ////////////
